# research-arcade

./: .env.template  .gitattributes  .gitignore  2507.02863v1.json  Dockerfile  LICENSE  LLM_eval4.txt  LLM_eval5.txt  README  README.md  add_graph.txt  app.py  arxiv_id_list.json  arxiv_papers_list.json  citation.txt  cite.txt  collect_data.py  csv_arxiv_citations.py  csv_arxiv_papers.py  csv_arxiv_paragraph_citations.py  csv_arxiv_paragraph_references.py  csv_arxiv_paragraphs.py  db2.txt  deployment.yaml  fetch_edits.py  image_extraction_m.py  llm_eval.txt  llm_eval10.txt  llm_eval11.txt  llm_eval13.txt  llm_eval16.txt  llm_eval17.txt  llm_eval18.txt  llm_eval3.txt  llm_eval7.txt  llm_eval8.txt  llm_eval9.txt  logfile  openreview.txt  or_edits_demo.py  (+46 more)
app/: crawl_arxiv_continuous.py
arxiv_id_openreview/: arxiv_id_list1.json  arxiv_id_list10.json  arxiv_id_list11.json  arxiv_id_list12.json  arxiv_id_list13.json  arxiv_id_list14.json  arxiv_id_list15.json  arxiv_id_list16.json  arxiv_id_list17.json  arxiv_id_list18.json  arxiv_id_list19.json  arxiv_id_list2.json  arxiv_id_list20.json  arxiv_id_list21.json  arxiv_id_list22.json  arxiv_id_list23.json  arxiv_id_list24.json  arxiv_id_list25.json  arxiv_id_list26.json  arxiv_id_list27.json  arxiv_id_list28.json  arxiv_id_list29.json  arxiv_id_list3.json  arxiv_id_list30.json  arxiv_id_list31.json  arxiv_id_list32.json  arxiv_id_list33.json  arxiv_id_list34.json  arxiv_id_list35.json  arxiv_id_list36.json  arxiv_id_list37.json  arxiv_id_list38.json  arxiv_id_list39.json  arxiv_id_list4.json  arxiv_id_list40.json  arxiv_id_list41.json  arxiv_id_list42.json  arxiv_id_list43.json  (+22 more)
(+659 files in other folders)
