[tool.poetry]
name = "research-arcade"
version = "0.1.7"
description = "A graph interface for academic tasks"
authors = ["Jingjun XU <jingjunxu596@gmail.com>", "Chongshan LIN <chongshan0lin@gmail.com>"]
license = "Apache 2.0 License"
readme = "README.md"
packages = [{ include = "research_arcade" }]

[tool.poetry.dependencies]
python = ">=3.10"
openreview-py = "*"
arxiv = "*"
pdfminer_six = "*"
pandas = "*"
semanticscholar = "*"
beartype = "*"
bibtexparser = "*"
psycopg2-binary = "*"
rapidfuzz = "*"
paperscraper = "*"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "normal"
strict = true
plugins = ["pydantic.mypy"]